# qt-ts-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  example1.xml  example_key_de.xml  example_unfinished.xml  i18n.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml  security.yml
docs/: qm_file.md
resources/locales/en/: core.ftl  qt_ts_tools.ftl
resources/locales/fr/: core.ftl  qt_ts_tools.ftl
src/: cli.rs  extract.rs  locale.rs  logging.rs  main.rs  merge.rs  sort.rs  ts.rs  ts_definition.rs  ts_next.rs
src/commands/: extract.rs  hash.rs  merge.rs  mod.rs  release.rs  shell_completion.rs  sort.rs  stat.rs  strip.rs  test_utils.rs
test_data/: 304_embedded_xml.ts  example_extract.xml  example_extract_extracted.xml  example_merge_finished.xml  example_merge_keep_translation_left.xml  example_merge_keep_translation_result.xml  example_merge_keep_translation_right.xml  example_merge_left.xml  example_merge_result.xml  example_merge_right.xml  example_merge_unfinished.xml  example_sort.xml  example_sort_sorted.xml  example_stats.xml  example_strip.xml  example_strip_stripped.xml  many_ctx_many_msgs.qm  many_ctx_many_msgs.ts  many_ctx_many_msgs_non_finished.qm  many_ctx_many_msgs_non_finished.ts  many_ctx_many_msgs_notranslation_tag.qm  many_ctx_many_msgs_notranslation_tag.ts  many_ctx_many_msgs_numerus.qm  many_ctx_many_msgs_numerus.ts  one_ctx_many_msgs.qm  one_ctx_many_msgs.ts  output_many_ctx_many_msgs  output_simple  simple.qm  simple.ts
