[package]
name = "qt-ts-tools"
authors = ["Alexandre Leblanc <a.leblanc+qttools@kitai.dev>"]
repository = "https://github.com/mrtryhard/qt-ts-tools"
keywords = ["qt", "translation", "windows", "linux"]
homepage = "https://github.com/mrtryhard/qt-ts-tools"
license = "MIT OR Apache-2.0"
version = "0.8.4"
edition = "2024"
description = "Small command line utility to manipulate Qt's translation files with diverse operations."

[dependencies]
clap = { version = "4.5.34", features = ["derive", "string"] }
clap_complete = "4.5.47"
clap_complete_nushell = "4.5.5"
clap_complete_command = "0.6.1"
env_logger = {  version = "0.11.7", default-features = false, features = ["humantime"] }
fluent-bundle = "0.15.3"
i18n-embed = { version = "0.15.3", features = ["fluent-system"] }
i18n-embed-fl = "0.9.3"
log = "0.4.27"
quick-xml = { version = "0.37.3", features = ["serialize"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
sys-locale = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
