[package]
name = "qt-ts-tools"
authors = ["Alexandre Leblanc <a.leblanc+qttools@kitai.dev>"]
repository = "https://github.com/mrtryhard/qt-ts-tools"
keywords = ["qt", "translation", "windows", "linux"]
homepage = "https://github.com/mrtryhard/qt-ts-tools"
license = "Apache-2.0"
version = "1.0.0"
edition = "2024"
description = "Small command line utility to manipulate Qt's translation files with diverse operations."

[dependencies]
clap = { version = "4.5.53", features = ["derive", "string"] }
clap_complete = "4.5.62"
clap_complete_nushell = "4.5.10"
clap_complete_command = "0.6.1"
env_logger = {  version = "0.11.8", default-features = false, features = ["humantime"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
i18n-embed-fl = "0.10.0"
log = "0.4.29"
quick-xml = { version = "0.38.4", features = ["serialize"] }
rust-embed = "8.8.0"
serde = { version = "1.0.228", features = ["derive"] }
sys-locale = "0.3.2"

[dev-dependencies]
assert_hex = "0.4.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
